# query_builder

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/adapters/audit/: json_stdout_audit_log.py
backend/app/adapters/catalog/: sqlalchemy_catalog_view.py  sqlalchemy_schema_reflector.py
backend/app/adapters/cipher/: fernet_credential_cipher.py
backend/app/adapters/compilers/: sqlalchemy_core_compiler.py
backend/app/adapters/executor/: pooled_sqlalchemy_query_executor.py  sqlalchemy_query_executor.py
backend/app/adapters/policy/: default_query_policy.py  table_allowlist_policy.py
backend/app/domain/: errors.py
backend/app/domain/entities/: dataset_definition.py  query_spec.py
backend/app/domain/interfaces/: audit_log.py  catalog_repository.py  connection_repository.py  credential_cipher.py  dataset_repository.py  query_compiler.py  query_executor.py  query_policy.py  schema_reflector.py
backend/app/domain/value_objects/: audit_event.py  dialect.py  filters.py  query_parts.py  refs.py  serialisation.py
backend/app/infrastructure/: app.py
backend/app/infrastructure/catalog/: in_memory_catalog_repository.py
backend/app/schemas/: queryspec.v1.json
backend/app/use_cases/: compile_query.py  execute_query.py  get_dataset.py  save_dataset.py
backend/tests/: helpers.py
backend/tests/contracts/: query_compiler_contract.py  query_executor_contract.py  query_policy_contract.py  test_default_query_policy_contract.py  test_sqlalchemy_core_compiler_contract.py
backend/tests/fakes/: fake_audit_log.py  fake_credential_cipher.py  fake_query_executor.py  in_memory_catalog.py
backend/tests/integration/: conftest.py  test_dataset_round_trip.py  test_full_pipeline.py  test_policy_rejection_flow.py
backend/tests/unit/: test_public_api.py  test_query_spec_codec.py  test_queryspec_schema.py  test_schema_resource.py
(+129 files in other folders)
