[project]
name = "query-builder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "sqlglot>=30.0,<31",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "jsonschema>=4.0",
]

[tool.setuptools.package-dir]
query_builder = "app"

[tool.setuptools.package-data]
query_builder = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["app", "tests"]
